@@ -80,6 +80,8 @@ ExpenseWidgetSetup::ExpenseWidgetSetup(QWidget *w, const char *n,
 	QSize s = fConfigWidget->size() + QSize(SPACING,SPACING);
 	fConfigWidget->resize(s);
 	fConfigWidget->setMinimumSize(s);
+
+	(void) setupDialog_id;
 }
 
 ExpenseWidgetSetup::~ExpenseWidgetSetup()
@@ -276,6 +278,28 @@ void ExpenseWidgetSetup::slotDBPolicyChanged()
 }
 
 // $Log$
+// Revision 1.11  2002/03/14 08:15:17  lukas
+// the connect from the Browse button to the slot was missing...
+//
+//
+// Index: ./conduits/expense/setupDialog.cc
+// ===================================================================
+// RCS file: /home/kde/kdepim/kpilot/conduits/expense/setupDialog.cc,v
+// retrieving revision 1.10
+// diff -u -r1.10 setupDialog.cc
+// --- ./conduits/expense/setupDialog.cc   2002/01/02 12:14:09     1.10
+// +++ ./conduits/expense/setupDialog.cc   2002/03/14 08:13:56
+// @@ -73,6 +73,9 @@
+//                 this,SLOT(slotDBPolicyChanged()));
+//         QObject::connect(fConfigWidget->fRotatePolicy,SIGNAL(clicked(int)),
+//                 this,SLOT(slotRotatePolicyChanged()));
+// +
+// +       QObject::connect(fConfigWidget->fCSVBrowse,SIGNAL(clicked()),
+// +               this,SLOT(slotCSVBrowse()));
+//
+//         QSize s = fConfigWidget->size() + QSize(SPACING,SPACING);
+//         fConfigWidget->resize(s);
+//
 // Revision 1.10  2002/01/02 12:14:09  bero
 // Fix build with -DNDEBUG
 //
@@ -303,46 +327,6 @@ void ExpenseWidgetSetup::slotDBPolicyChanged()
 //
 // Revision 1.3  2001/03/24 16:10:11  adridg
 // Minor beautification
-//
-// Revision 1.2  2001/03/14 16:56:02  molnarc
-//
-// CJM - Added browse button on csv export tab.
-// CJM - Added database export tab and required information.
-//
-// Revision 1.1  2001/03/04 21:47:04  adridg
-// New expense conduit, non-functional but it compiles
-//
-
-// $Log$
-// Revision 1.10  2002/01/02 12:14:09  bero
-// Fix build with -DNDEBUG
-//
-// Revision 1.9  2001/12/18 07:40:49  adridg
-// Enable conduit's config & back out danimo's work
-//
-// Revision 1.3  2001/12/13 21:35:12  adridg
-// Gave all conduits a config dialog
-//
-// Revision 1.2  2001/12/02 22:03:07  adridg
-// Expense conduit finally works
-//
-// Revision 1.1  2001/11/18 16:55:51  adridg
-// Moving expenses conduit to new arch.
-//
-// Revision 1.2  2001/10/08 22:25:41  adridg
-// Moved to libkpilot and lib-based conduits
-//
-// Revision 1.1  2001/10/04 23:51:55  adridg
-// Nope. One more really final commit to get the alpha to build. Dirk, otherwise just remove the conduits/ subdir from kdepim/kpilot/Makefile.am
-//
-
-// $Log$
-// Revision 1.10  2002/01/02 12:14:09  bero
-// Fix build with -DNDEBUG
-//
-// Revision 1.9  2001/12/18 07:40:49  adridg
-// Enable conduit's config & back out danimo's work
-//
 //
 // Revision 1.2  2001/03/14 16:56:02  molnarc
 //
